@@ -1,3 +1,7 @@
+2006-01-03  Daniel Macks  <dmacks@netspace.org>
+
+	* inject.pl, install.sh: updated Copyright notice
+
 2005-07-21 Max Horn  <max@quendi.de>
 
 	* all mirror files: Added URL pointing to the official mirror list
@@ -14,9 +18,11 @@
 	* VERSION: releasing version 0.24.4.1 of fink-mirrors
 
 2005-04-21  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
 	* _keys: added Colombia
 
 2005-04-16  David H <dmalloc@users.sourceforge.net>
+
 	* rsync: Clean up of dead and unmaintained mirrors
 
 2005-04-16  Dave Morrison  <dmrrsn@users.sourceforge.net>
